종합예제 스타일시트적용@!

--- a/11.html
+++ b/11.html
@@ -80,6 +80,7 @@
         .search-bar{
             height: 26px;
             padding: 7px;
+            float: right;
         }
         .input-search{
             display: block;
